--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,23 @@
-* {
+*, *::before, *::after {
 	padding: 0;
 	margin: 0;
-	box-sizing: border-box;
+	box-sizing: inherit; /*artinya setiap elemen yang kita buat box-sizing nya akan mengikuti elemen di atasnya (body atuau html (root))*/
+}
+
+/*membuat constan ukuran rem, kitika kita buat font size di root 10px maka 1rem = 10px*/
+html {
+	/*font-size: 10px;*/
+	font-size: 62.5%; /*didapat dari pembagian 10/16 = 0.625 (dijadikan % menjadi 62.5%), 10 adalah pixel yg kita definisikan...16 adalah default pixel dari browser*/
 }
 
 body {
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	/*font-size: 16px;*/
 	line-height: 1.7;
 	color: #777;
 	padding: 30px;
+	box-sizing: border-box;
 }
 
 
@@ -27,21 +34,21 @@ body {
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
 	position: absolute;
-	top: 40px;
-	left: 40px;
+	top: 4rem;
+	left: 4rem;
 }
 
-.logo {
-	height: 35px;
+.header__logo {
+	height: 3.5rem;
 }
 
-.logo:hover {
+.header__logo:hover {
 	cursor: pointer;
 }
 
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -52,15 +59,15 @@ body {
 .heading-primary {
 	color: #ffffff;
 	text-transform: uppercase;
-	margin-bottom: 60px;
+	margin-bottom: 6rem;
 	backface-visibility: hidden; /*saya masih belum tahu maksudnya*/
 }
 
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
-	font-size: 60px;
+	font-size: 6rem;
 	font-weight: 400;
-	letter-spacing: 35px;
+	letter-spacing: 3.5rem;
 
 	animation: moveInLeft;
 	animation-duration: 2s;
@@ -69,11 +76,11 @@ body {
 	/*animation-delay: 2s;*/
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
-	font-size: 20px;
+	font-size: 2rem;
 	font-weight: 700;
-	letter-spacing: 17.5px;
+	letter-spacing: 1.75rem;
 
 	animation: moveInRight 2s ease-in;
 }
@@ -81,8 +88,8 @@ body {
 .btn:link, .btn:visited {
 	text-transform: uppercase;
 	text-decoration: none;
-	padding: 15px 40px;
-	border-radius: 100px;
+	padding: 1.5rem 4rem;
+	border-radius: 10rem;
 	display: inline-block;
 	position: relative;
 
@@ -91,14 +98,14 @@ body {
 
 .btn:hover {
 	transform: translateY(-3px);
-	box-shadow: 0 5px 10px rgba(0,0,0,.2)
+	box-shadow: 0 .5rem 1rem rgba(0,0,0,.2)
 }
 
 .btn:active {
 	transform: translateY(-1px);
 }
 
-.btn-white {
+.btn--white {
 	background-color: #ffffff;
 	color: #777;
 }
@@ -108,7 +115,7 @@ body {
 	display: inline-block;
 	height: 100%;
 	width: 100%;
-	border-radius: 100px;
+	border-radius: 10rem;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -116,7 +123,7 @@ body {
 	transition: all 0.5s
 }
 
-.btn-white::after {
+.btn--white::after {
 	background-color: #ffffff;
 }
 
@@ -125,7 +132,7 @@ body {
 	opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
 	animation: moveInBottom .5s ease-out .75s;
 	animation-fill-mode: backwards;
 }
@@ -137,7 +144,7 @@ body {
 @keyframes moveInLeft {
 	0% {
 		opacity: 0;
-		transform: translateX(-100px);
+		transform: translateX(-10rem);
 	}
 
 	60% {
@@ -145,7 +152,7 @@ body {
 	}
 
 	80% {
-		transform: translateX(20px);
+		transform: translateX(2rem);
 	}
 
 	100% {
@@ -157,11 +164,11 @@ body {
 @keyframes moveInRight {
 	0% {
 		opacity: 0;
-		transform: translateX(80px);
+		transform: translateX(8rem);
 	}
 
 	80% {
-		transform: translateX(-10px) rotate(90deg);
+		transform: translateX(-1rem) rotate(90deg);
 	}
 
 	100% {
@@ -173,7 +180,7 @@ body {
 @keyframes moveInBottom {
 	0% {
 		opacity: 0;
-		transform: translateY(30px);
+		transform: translateY(3rem);
 	}
 
 	100% {
