conver header style css to sass code

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-dark: #28b485;
 
 $color-gray-dark: #777;
 $color-white: #fff;
+$color-black: #000;
 
 *, *::before, *::after {
 	padding: 0;
@@ -39,28 +40,28 @@ body {
 	position: relative;
 
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-}
 
-.header__logo-box {
-	position: absolute;
-	top: 4rem;
-	left: 4rem;
-}
+	&__logo-box {
+		position: absolute;
+		top: 4rem;
+		left: 4rem;
+	}
 
-.header__logo {
-	height: 3.5rem;
-}
+	&__logo {
+		height: 3.5rem;
 
-.header__logo:hover {
-	cursor: pointer;
-}
+		&:hover {
+			cursor: pointer;
+		}
+	}
 
-.header__text-box {
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	transform: translate(-50%, -50%); /*memposisikan objek absolute menjadi di tengah*/
-	text-align: center;
+	&__text-box {
+		position: absolute;
+		top: 40%;
+		left: 50%;
+		transform: translate(-50%, -50%); /*memposisikan objek absolute menjadi di tengah*/
+		text-align: center;
+	}
 }
 
 .heading-primary {
@@ -68,81 +69,87 @@ body {
 	text-transform: uppercase;
 	margin-bottom: 6rem;
 	backface-visibility: hidden; /*saya masih belum tahu maksudnya*/
+
+	&--main {
+		display: block;
+		font-size: 6rem;
+		font-weight: 400;
+		letter-spacing: 3.5rem;
+
+		animation: moveInLeft;
+		animation-duration: 2s;
+		animation-timing-function: ease-out;
+		/*animation-iteration-count: 2;*/
+		/*animation-delay: 2s;*/
+	}
+
+	&--sub {
+		display: block;
+		font-size: 2rem;
+		font-weight: 700;
+		letter-spacing: 1.75rem;
+
+		animation: moveInRight 2s ease-in;
+	}
 }
 
-.heading-primary--main {
-	display: block;
-	font-size: 6rem;
-	font-weight: 400;
-	letter-spacing: 3.5rem;
+.btn {
+	&:link, &:visited {
+		font-size: 1.6rem;
+		text-transform: uppercase;
+		text-decoration: none;
+		padding: 1.5rem 4rem;
+		border-radius: 10rem;
+		display: inline-block;
+		position: relative;
 
-	animation: moveInLeft;
-	animation-duration: 2s;
-	animation-timing-function: ease-out;
-	/*animation-iteration-count: 2;*/
-	/*animation-delay: 2s;*/
+		transition: all .5s; /*elemen akan berubah secara betahap dalam waktu 0.5s, sederhananya memperhalus perubahan elemen*/
+	}
+
+	&:hover {
+		transform: translateY(-3px);
+		box-shadow: 0 .5rem 2rem rgba($color-black,.2);
+
+		&::after {
+			transform: scaleX(1.4) scaleY(1.6);
+			opacity: 0;
+		}
+	}
+
+	&:active {
+		transform: translateY(-1px);
+		box-shadow: 0 .5rem 1rem rgba($color-black,.2)
+	}
+
+	&--white {
+		background-color: $color-white;
+		color: $color-gray-dark;
+
+		&::after {
+			background-color: $color-white;
+		}
+	}
+
+	&::after {
+		content: "";
+		display: inline-block;
+		height: 100%;
+		width: 100%;
+		border-radius: 10rem;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		transition: all 0.5s
+	}
+
+	&--animated {
+		animation: moveInBottom .5s ease-out .75s;
+		animation-fill-mode: backwards;
+	}
 }
 
-.heading-primary--sub {
-	display: block;
-	font-size: 2rem;
-	font-weight: 700;
-	letter-spacing: 1.75rem;
 
-	animation: moveInRight 2s ease-in;
-}
-
-.btn:link, .btn:visited {
-	text-transform: uppercase;
-	text-decoration: none;
-	padding: 1.5rem 4rem;
-	border-radius: 10rem;
-	display: inline-block;
-	position: relative;
-
-	transition: all .5s; /*elemen akan berubah secara betahap dalam waktu 0.5s, sederhananya memperhalus perubahan elemen*/
-}
-
-.btn:hover {
-	transform: translateY(-3px);
-	box-shadow: 0 .5rem 1rem rgba(0,0,0,.2)
-}
-
-.btn:active {
-	transform: translateY(-1px);
-}
-
-.btn--white {
-	background-color: $color-white;
-	color: $color-gray-dark;
-}
-
-.btn::after {
-	content: "";
-	display: inline-block;
-	height: 100%;
-	width: 100%;
-	border-radius: 10rem;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	transition: all 0.5s
-}
-
-.btn--white::after {
-	background-color: $color-white;
-}
-
-.btn:hover::after {
-	transform: scaleX(1.4) scaleY(1.6);
-	opacity: 0;
-}
-
-.btn--animated {
-	animation: moveInBottom .5s ease-out .75s;
-	animation-fill-mode: backwards;
-}
 
 
 /****************ANIMATION*********************/
