--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,47 @@
   box-sizing: inherit;
   /*artinya setiap elemen yang kita buat box-sizing nya akan mengikuti elemen di atasnya (body atuau html (root))*/ }
 
-/*membuat constan ukuran rem, kitika kita buat font size di root 10px maka 1rem = 10px*/
+/*membuat constan ukuran rem, ketika kita buat font size di root 10px maka 1rem = 10px*/
 html {
   /*font-size: 10px;*/
   font-size: 62.5%;
   /*didapat dari pembagian 10/16 = 0.625 (dijadikan % menjadi 62.5%), 10 adalah pixel yg kita definisikan...16 adalah default pixel dari browser*/ }
+
+body {
+  box-sizing: border-box; }
+
+/****************ANIMATION*********************/
+/****************ANIMATION*********************/
+/****************ANIMATION*********************/
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  60% {
+    transform: rotate(180deg); }
+  80% {
+    transform: translateX(2rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(8rem); }
+  80% {
+    transform: translateX(-1rem) rotate(90deg); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
 body {
   font-family: "Lato", sans-serif;
@@ -16,35 +52,7 @@ body {
   /*font-size: 16px;*/
   line-height: 1.7;
   color: #777;
-  padding: 30px;
-  box-sizing: border-box; }
-
-/***********HEADER***************/
-/***********HEADER***************/
-/***********HEADER***************/
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  /*image background akan berpedoman pada top layar, sederananya gambar akan selalu di atas*/
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-    .header__logo:hover {
-      cursor: pointer; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /*memposisikan objek absolute menjadi di tengah*/
-    text-align: center; }
+  padding: 30px; }
 
 .heading-primary {
   color: #fff;
@@ -113,35 +121,29 @@ body {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards; }
 
-/****************ANIMATION*********************/
-/****************ANIMATION*********************/
-/****************ANIMATION*********************/
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem); }
-  60% {
-    transform: rotate(180deg); }
-  80% {
-    transform: translateX(2rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(8rem); }
-  80% {
-    transform: translateX(-1rem) rotate(90deg); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
+/***********HEADER***************/
+/***********HEADER***************/
+/***********HEADER***************/
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  /*image background akan berpedoman pada top layar, sederananya gambar akan selalu di atas*/
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+    .header__logo:hover {
+      cursor: pointer; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*memposisikan objek absolute menjadi di tengah*/
+    text-align: center; }
