--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,204 +1,19 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+// import file yang ada di folder base
+@import "base/base";
+@import "base/animation";
+@import "base/typography";
+@import "base/utilities";
 
-$color-gray-dark: #777;
-$color-white: #fff;
-$color-black: #000;
+// import file dari folder abstracts
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-*, *::before, *::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: inherit; /*artinya setiap elemen yang kita buat box-sizing nya akan mengikuti elemen di atasnya (body atuau html (root))*/
-}
+// import file dari folder pages
+@import "pages/home";
 
-/*membuat constan ukuran rem, kitika kita buat font size di root 10px maka 1rem = 10px*/
-html {
-	/*font-size: 10px;*/
-	font-size: 62.5%; /*didapat dari pembagian 10/16 = 0.625 (dijadikan % menjadi 62.5%), 10 adalah pixel yg kita definisikan...16 adalah default pixel dari browser*/
-}
+// import file dari folder components
+@import "components/buttons";
 
-body {
-	font-family: "Lato", sans-serif;
-	font-weight: 400;
-	/*font-size: 16px;*/
-	line-height: 1.7;
-	color: $color-gray-dark;
-	padding: 30px;
-	box-sizing: border-box;
-}
-
-
-/***********HEADER***************/
-/***********HEADER***************/
-/***********HEADER***************/
-.header {
-	height: 95vh;
-	background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../img/hero.jpg);
-	background-size: cover;
-	background-position: top; /*image background akan berpedoman pada top layar, sederananya gambar akan selalu di atas*/
-	position: relative;
-
-	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-	&__logo-box {
-		position: absolute;
-		top: 4rem;
-		left: 4rem;
-	}
-
-	&__logo {
-		height: 3.5rem;
-
-		&:hover {
-			cursor: pointer;
-		}
-	}
-
-	&__text-box {
-		position: absolute;
-		top: 40%;
-		left: 50%;
-		transform: translate(-50%, -50%); /*memposisikan objek absolute menjadi di tengah*/
-		text-align: center;
-	}
-}
-
-.heading-primary {
-	color: $color-white;
-	text-transform: uppercase;
-	margin-bottom: 6rem;
-	backface-visibility: hidden; /*saya masih belum tahu maksudnya*/
-
-	&--main {
-		display: block;
-		font-size: 6rem;
-		font-weight: 400;
-		letter-spacing: 3.5rem;
-
-		animation: moveInLeft;
-		animation-duration: 2s;
-		animation-timing-function: ease-out;
-		/*animation-iteration-count: 2;*/
-		/*animation-delay: 2s;*/
-	}
-
-	&--sub {
-		display: block;
-		font-size: 2rem;
-		font-weight: 700;
-		letter-spacing: 1.75rem;
-
-		animation: moveInRight 2s ease-in;
-	}
-}
-
-.btn {
-	&:link, &:visited {
-		font-size: 1.6rem;
-		text-transform: uppercase;
-		text-decoration: none;
-		padding: 1.5rem 4rem;
-		border-radius: 10rem;
-		display: inline-block;
-		position: relative;
-
-		transition: all .5s; /*elemen akan berubah secara betahap dalam waktu 0.5s, sederhananya memperhalus perubahan elemen*/
-	}
-
-	&:hover {
-		transform: translateY(-3px);
-		box-shadow: 0 .5rem 2rem rgba($color-black,.2);
-
-		&::after {
-			transform: scaleX(1.4) scaleY(1.6);
-			opacity: 0;
-		}
-	}
-
-	&:active {
-		transform: translateY(-1px);
-		box-shadow: 0 .5rem 1rem rgba($color-black,.2)
-	}
-
-	&--white {
-		background-color: $color-white;
-		color: $color-gray-dark;
-
-		&::after {
-			background-color: $color-white;
-		}
-	}
-
-	&::after {
-		content: "";
-		display: inline-block;
-		height: 100%;
-		width: 100%;
-		border-radius: 10rem;
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: -1;
-		transition: all 0.5s
-	}
-
-	&--animated {
-		animation: moveInBottom .5s ease-out .75s;
-		animation-fill-mode: backwards;
-	}
-}
-
-
-
-
-/****************ANIMATION*********************/
-/****************ANIMATION*********************/
-/****************ANIMATION*********************/
-@keyframes moveInLeft {
-	0% {
-		opacity: 0;
-		transform: translateX(-10rem);
-	}
-
-	60% {
-		transform: rotate(180deg);
-	}
-
-	80% {
-		transform: translateX(2rem);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
-@keyframes moveInRight {
-	0% {
-		opacity: 0;
-		transform: translateX(8rem);
-	}
-
-	80% {
-		transform: translateX(-1rem) rotate(90deg);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
-@keyframes moveInBottom {
-	0% {
-		opacity: 0;
-		transform: translateY(3rem);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
+// import file dari folder layouts
+@import "layouts/header";
