--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,13 @@ body {
     letter-spacing: 1.75rem;
     animation: moveInRight 2s ease-in; }
 
+/*
+Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (memanfaatkan pseudo element))
+
+- clear digunakan untuk membersihkan float yang kita buat
+- clear: left kita gunakan untuk membersihkan float: left, begitu juga sebaliknya
+- clear: both kita gunakan untuk membersihkan float: left maupun right.
+*/
 .btn:link, .btn:visited {
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -147,3 +154,35 @@ body {
     transform: translate(-50%, -50%);
     /*memposisikan objek absolute menjadi di tengah*/
     text-align: center; }
+
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto;
+  /* logicnya adalah kita set margin kanan kiri dengan jarak yang sama menggunakan auto */
+  /*
+	menyeleksi row element yang bukan element terakhir memiliki margin bottom sebesar 8rem
+	*/ }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    background-color: orange;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 2rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 2rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 2rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc( 2 * ((100% - 2 * 2rem) / 3) + 2rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 2rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc( 2 * ((100% - 3 * 2rem) / 4) + 2rem); }
+  .row .col-3-of-4 {
+    width: calc( 3 * ((100% - 3 * 2rem) / 4) + (2 * 2rem)); }
