--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,46 @@ body {
     letter-spacing: 1.75rem;
     animation: moveInRight 2s ease-in; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  display: inline-block;
+  /*background linear hanya sebatas text-nya saja (tidak full)*/
+  -webkit-background-clip: text;
+  /* properti ini digunakan supaya background linear hanya mengenai text saja */
+  color: transparent;
+  /* membuat text menjadi transparan sehingga text yang dikenai efek linear gradient akan terlihat */
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    /* skew untuk memiringkan text, scale untuk memperbesar/memperkecil */
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
 /*
 Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (memanfaatkan pseudo element))
 
@@ -84,6 +124,11 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
 - clear: left kita gunakan untuk membersihkan float: left, begitu juga sebaliknya
 - clear: both kita gunakan untuk membersihkan float: left maupun right.
 */
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
+
 .btn:link, .btn:visited {
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -128,6 +173,51 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all .2s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      outline: 1rem solid #55c57a;
+      transform: scale(1.05) translateY(-2rem);
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(1); }
+
 /***********HEADER***************/
 /***********HEADER***************/
 /***********HEADER***************/
@@ -157,7 +247,6 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
 
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto;
   /* logicnya adalah kita set margin kanan kiri dengan jarak yang sama menggunakan auto */
   /*
@@ -170,7 +259,6 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orange;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 2rem; }
