--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-gray-light-1: #f7f7f7;
+
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
@@ -12,3 +14,6 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-zero: 0;
 $gutter-horizontal: 2rem;
+
+// FONT SIZE
+$default-font-size: 1.6rem;
