--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,3 +35,36 @@ body {
 		animation: moveInRight 2s ease-in;
 	}
 }
+
+
+.heading-secondary {
+	font-size: 3.5rem;
+	text-transform: uppercase;
+	font-weight: 700;
+
+	background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+	display: inline-block; /*background linear hanya sebatas text-nya saja (tidak full)*/
+	-webkit-background-clip: text; /* properti ini digunakan supaya background linear hanya mengenai text saja */
+	color: transparent; /* membuat text menjadi transparan sehingga text yang dikenai efek linear gradient akan terlihat */
+	letter-spacing: .2rem;
+	transition: all .2s;
+
+	&:hover {
+		transform: skewY(2deg) skewX(15deg) scale(1.1); /* skew untuk memiringkan text, scale untuk memperbesar/memperkecil */
+		text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+	}
+}
+
+.heading-tertiary {
+	font-size: $default-font-size;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.paragraph {
+	font-size: $default-font-size;
+
+	&:not(:last-child) {
+		margin-bottom: 3rem;
+	}
+}
