--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 
 // import file dari folder components
 @import "components/buttons";
+@import "components/composition";
 
 // import file dari folder layouts
 @import "layouts/header";
