membuat scetion features dengan icon, transform, dan skewY

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 // import file dari folder components
 @import "components/buttons";
 @import "components/composition";
+@import "components/feature_box";
 
 // import file dari folder layouts
 @import "layouts/header";
