--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,15 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
   padding: 25rem 0;
   margin-top: -20vh; }
 
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
+
 .btn:link, .btn:visited {
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -218,6 +227,27 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(1); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform .3s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: .5rem;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    display: inline-block;
+    /*background linear hanya sebatas text-nya saja (tidak full)*/
+    -webkit-background-clip: text;
+    /* properti ini digunakan supaya background linear hanya mengenai text saja */
+    color: transparent;
+    /* membuat text menjadi transparan sehingga text yang dikenai efek linear gradient akan terlihat */ }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
 /***********HEADER***************/
 /***********HEADER***************/
 /***********HEADER***************/
@@ -261,16 +291,16 @@ Penggunaan Properti Clear (pada kesempatan ini kita gunakan micro clearfix (mema
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 2rem; }
+      margin-right: 6rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 2rem) / 2); }
+    width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2 * 2rem) / 3); }
+    width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
-    width: calc( 2 * ((100% - 2 * 2rem) / 3) + 2rem); }
+    width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
   .row .col-1-of-4 {
-    width: calc((100% - 3 * 2rem) / 4); }
+    width: calc((100% - 3 * 6rem) / 4); }
   .row .col-2-of-4 {
-    width: calc( 2 * ((100% - 3 * 2rem) / 4) + 2rem); }
+    width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
-    width: calc( 3 * ((100% - 3 * 2rem) / 4) + (2 * 2rem)); }
+    width: calc( 3 * ((100% - 3 * 6rem) / 4) + (2 * 6rem)); }
