mambuat section tours

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/buttons";
 @import "components/composition";
 @import "components/feature_box";
+@import "components/card";
 
 // import file dari folder layouts
 @import "layouts/header";
