--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,6 +8,7 @@
 	background-position: top; /*image background akan berpedoman pada top layar, sederananya gambar akan selalu di atas*/
 	position: relative;
 
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
 	&__logo-box {
