--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,11 @@
+// STYLING ABOUT SECTION
 .section-about {
 	background-color: $color-gray-light-1;
 	padding: 25rem 0;
 	margin-top: -20vh;
 }
 
+// STYLING FEATURES SECTION
 .section-features {
 	padding: 20rem 0;
 	background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../img/nat-4.jpg);
@@ -16,4 +18,11 @@
 	& > * {
 		transform: skewY(7deg);
 	}
+}
+
+// STYLING TOURS SECTION
+.section-tours {
+	background-color: $color-gray-light-1;
+	padding: 25rem 0 15rem 0;
+	margin-top: -10rem;
 }
