--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -65,7 +65,7 @@
 
 .btn-text {
 	&:link, &:visited {
-		font-size: $default-font-size;
+		font-size: 1.6rem;
 		color: $color-primary;
 		display: inline-block;
 		text-decoration: none;
@@ -75,6 +75,7 @@
 	}
 
 	&:hover {
+        cursor: pointer;
 		background-color: $color-primary;
 		color: $color-white;
 		box-shadow: 0 1rem 2rem rgba($color-black, .15);
