--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,9 @@
 @import "components/composition";
 @import "components/feature_box";
 @import "components/card";
+@import "components/story";
+@import "components/bg-video";
+
 
 // import file dari folder layouts
 @import "layouts/header";
