--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -26,3 +26,9 @@
 	padding: 25rem 0 15rem 0;
 	margin-top: -10rem;
 }
+
+// STYLING STORIES SECTION
+.section-stories {
+    position: relative; /*ini kita tambahkan karen untuk class bg-video memiliki position absolute*/
+	padding: 15rem 0;
+}
